<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/downloads" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_white_24dp"
        android:title="@string/library" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings" />

</menu>