<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/colorPrimaryVariant">

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_playlist_name"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/search_cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>