<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="UnusedAttribute">
        <ImageView
            android:id="@+id/albumImage"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:src="@drawable/default_song_image"
            android:contentDescription="@string/image" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/titleAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_album"
        android:enabled="true"
        android:fontFamily="@font/lato"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:gravity="center"/>
    <TextView
        android:id="@+id/artistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:fontFamily="@font/lato"
        android:textColor="@color/grey_200"
        android:textStyle="bold"
        android:textSize="15sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:gravity="center"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/playAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_play_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/play" />

        <ImageView
            android:id="@+id/saveAlbum"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:src="@drawable/button_add_library_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playAlbum"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.3"
            android:contentDescription="@string/save" />

        <ImageView
            android:id="@+id/playAlbumShuffle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="4dp"
            android:src="@drawable/button_shuffle_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playAlbum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.7"
            android:contentDescription="@string/shuffle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>