<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/historyIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_history_grey_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:flow_verticalBias="0.5"
        app:layout_constraintHorizontal_bias="0"
        android:contentDescription="@string/history" />
    <TextView
        android:id="@+id/requestText"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/request"
        android:textSize="18sp"
        android:textColor="#9e9e9e"
        app:layout_constraintStart_toEndOf="@id/historyIcon"
        app:layout_constraintEnd_toStartOf="@id/pastIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:flow_verticalBias="0.5"
        app:layout_constraintHorizontal_bias="0"/>
    <ImageView
        android:id="@+id/pastIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:src="@drawable/ic_paste_white_24dp"
        android:scaleX="-1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:flow_verticalBias="0.5"
        app:layout_constraintHorizontal_bias="1"
        android:contentDescription="@string/add" />
</androidx.constraintlayout.widget.ConstraintLayout>
